--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     h3{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
-    pre{
-        color: rgb(32, 175, 190);
+    pre{color: rgb(32, 175, 190);
     }
     p {
         color:#858585
